--- a/sockets_intro/Makefile
+++ b/sockets_intro/Makefile
@@ -5,10 +5,11 @@ SRC_DIR = src
 all: server client
 
 server: $(SRC_DIR)/server.c
-	$(CC) $(CFLAGS) -o server $(SRC_DIR)/server.c
+	$(CC) $(CFLAGS) -o bin/server $(SRC_DIR)/server.c
 
 client: $(SRC_DIR)/client.c
-	$(CC) $(CFLAGS) -o client $(SRC_DIR)/client.c
+	$(CC) $(CFLAGS) -o bin/client $(SRC_DIR)/client.c
 
 clean:
-	rm -f server client
+	rm -f bin/server bin/client
+	
