--- a/code/src/Makefile
+++ b/code/src/Makefile
@@ -9,14 +9,14 @@ all: server client showip
 server: $(SRC_DIR)/server.c
 	$(CC) $(CFLAGS) -o $(BIN_DIR)/server $(SRC_DIR)/server.c
 
+server_loop: $(SRC_DIR)/server_loop.c
+	$(CC) $(CFLAGS) -o $(BIN_DIR)/server_loop $(SRC_DIR)/server_loop.c
+
 client: $(SRC_DIR)/client.c
 	$(CC) $(CFLAGS) -o $(BIN_DIR)/client $(SRC_DIR)/client.c
 
 showip: $(SRC_DIR)/showip.c
 	$(CC) $(CFLAGS) -o $(BIN_DIR)/showip $(SRC_DIR)/showip.c
-
-showip2: $(SRC_DIR)/showip2.c
-	$(CC) $(CFLAGS) -o $(BIN_DIR)/showip2 $(SRC_DIR)/showip2.c
 
 clean:
 	rm -f $(BIN_DIR)/*
