Started implementation of TCP  server using select

--- a/code/src/Makefile
+++ b/code/src/Makefile
@@ -24,6 +24,12 @@ tcpclient_debug: $(SRC_DIR)/tcpclient.c
 showip: $(SRC_DIR)/showip.c
 	$(CC) $(CFLAGS) -o $(BIN_DIR)/showip $(SRC_DIR)/showip.c
 
+tcpserver_multiplex: $(SRC_DIR)/tcpserver_multiplex.c
+	$(CC) $(CFLAGS) -o $(BIN_DIR)/tcpserver_multiplex $(SRC_DIR)/tcpserver_multiplex.c
+
+tcpserver_multiplex_debug: $(SRC_DIR)/tcpserver_multiplex.c
+	$(CC) $(CFLAGS) -g -DDEBUG -o $(BIN_DIR)/tcpserver_multiplex_debug $(SRC_DIR)/tcpserver_multiplex.c
+
 clean:
 	rm -f $(BIN_DIR)/*
 	
