--- a/code/src/Makefile
+++ b/code/src/Makefile
@@ -1,5 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -Wextra 
+CFLAGS_SSL = -lcrypto -lssl -Wall -Wextra 
 SRC_DIR = ../src
 BIN_DIR = ../bin
 #convinience dirs
@@ -9,6 +10,7 @@ WEB_CLIENT = $(SRC_DIR)/web_client
 WEB_SERVER = $(SRC_DIR)/web_server
 UDP = $(SRC_DIR)/udp
 DNS_SRC = $(SRC_DIR)/dns
+HTTPS_SRC = $(SRC_DIR)/https
 
 #all: server client showip
 
@@ -28,7 +30,7 @@ tcpclient_debug: $(TCP_CLIENT)/tcpclient.c
 	$(CC) $(CFLAGS) -g -DDEBUG -o $(BIN_DIR)/tcpclient $(TCP_CLIENT)/tcpclient.c
 
 tcpserver_multiplex: $(TCP_SERVER)/tcpserver_multiplex.c
-	$(CC) $(CFLAGS) -o $(BIN_DIR)/tcpserver_multiplex $(TCP_SERVER)/tcpserver_multiplex.c
+	$(CC) $(CFLAGS) -o $(BIN_DIRHTTPS_SRC)/tcpserver_multiplex $(TCP_SERVER)/tcpserver_multiplex.c
 
 tcpserver_multiplex_debug: $(TCP_SERVER)/tcpserver_multiplex.c
 	$(CC) $(CFLAGS) -g -DDEBUG -o $(BIN_DIR)/tcpserver_multiplex_debug $(TCP_SERVER)/tcpserver_multiplex.c
@@ -63,6 +65,14 @@ webserver_debug: $(WEB_SERVER)/web_server.c
 
 webserver: $(WEB_SERVER)/web_server.c
 	$(CC) $(CFLAGS) -o $(BIN_DIR)/webserver $(WEB_SERVER)/web_server.c
+
+
+https_simple: $(HTTPS_SRC)/https_simple.c
+	$(CC) $(HTTPS_SRC)/https_simple.c $(CFLAGS_SSL) -o $(BIN_DIR)/https_simple 
+
+https_simple_debug: $(HTTPS_SRC)/https_simple.c
+	$(CC) $(HTTPS_SRC)/https_simple.c $(CFLAGS_SSL) -g -DDEBUG -o $(BIN_DIR)/https_simple_debug
+
 
 
 clean:
